added french corrections

--- a/source/localizable/partials/home_more.fr.html.erb
+++ b/source/localizable/partials/home_more.fr.html.erb
@@ -1,9 +1,9 @@
-<h1 class="survey_additional_header">Ce que vous devriez savoir</h1>
+<h1 class="survey_additional_header">Ce que vous devez savoir</h1>
 
 <p class="survey_additional">
-  Les données collectées dans le cadre de cette enquête seront utilisées à fin de visualisation d’indicateurs statistiques et pour la recherche épidémiologique. Cette enquête est ouverte à tous, et pas exclusivement aux personnes qui peuvent avoir contracté le SARS-CoV-2 (COVID-19). Dans le cas où vous souhaiteriez participer au nom de plusieurs membres de votre foyer (e.g. enfants), veuillez remplir un sondage par personne.
+  Les données collectées dans le cadre de cette enquête seront utilisées à fin de visualisation d’indicateurs statistiques et pour la recherche épidémiologique. Cette enquête est ouverte à tous, et pas exclusivement aux personnes qui peuvent avoir contracté le SARS-CoV-2 (COVID-19). Dans le cas où vous souhaiteriez participer au nom de plusieurs membres de votre foyer (eg. enfants), veuillez remplir un sondage par personne.
 </p>
 
 <p class="survey_additional_part2">
-  Cette enquête n’est pas un outil de diagnostic du COVID-19, y participer n’exempt aucun participant à se soumettre à un test diagnostic en cas de besoin. Avoir l'un des symptômes répertoriés dans notre enquête n'est pas une indication de COVID-19. La présence d’une condition préexistante (comorbidité) ne signifie pas nécessairement que vous êtes une personne à risque. Si vous pensez être malade et souhaitez recevoir des informations médicales, veuillez contacter votre médecin traitant ou visitez la page Internet de <a href="https://www.bag.admin.ch/bag/en/home.html" target="_blank">l’Office fédéral Suisse de santé publique</a>.
+  Cette enquête n’est pas un outil de diagnostic du COVID-19, y participer n’exempte aucun participant de se soumettre à un test diagnostic en cas de besoin. Avoir l'un des symptômes répertoriés dans notre enquête n'est pas une indication de COVID-19. La présence d’une condition préexistante (comorbidité) ne signifie pas nécessairement que vous êtes une personne à risque. Si vous pensez être malade et souhaitez recevoir des informations médicales, veuillez contacter votre médecin traitant ou visitez la page Internet de <a href="https://www.bag.admin.ch/bag/en/home.html" target="_blank">l’Office fédéral de la santé publique (OFSP)</a>.
 </p>
