--- a/source/localizable/partials/mailinglist.html.erb
+++ b/source/localizable/partials/mailinglist.html.erb
@@ -18,7 +18,7 @@
     </div>
 
     <div class="mdl-footer">
-      <button class="btn btn--inv cancel" onclick="return false">Cancel</button>
+      <button class="btn btn--inv cancel" onclick="return false"><%= t(:'mailingList.cancel') %></button>
       <button id="joinButton" class="btn confirm" onclick="return false"><%= t(:'mailingList.join') %></button>
     </div>
   </div>
