--- a/source/localizable/study_info.fr.html.erb
+++ b/source/localizable/study_info.fr.html.erb
@@ -6,18 +6,20 @@
 
     <p>
       <strong>Titre de l’étude: </strong>
-      Enquête longitudinale de santé COVID-19 l’échelle de la Suisse (SloCo; Approbation Ethique ETH Zurich 2020-N-42)
+      Enquête longitudinale de santé COVID-19 à l’échelle de la Suisse (SloCo; Approbation Ethique ETH Zurich 2020-N-42)
     </p>
 
     <p>
       <strong>But de l’étude </strong>
-      L’objectif de cette étude est de collecter auprès de la population suisse des données de santé personnalisée liées à l’infection COVID-19. Ces données seront utilisées pour suivre et visualiser les changements de la situation sanitaire en temps réel. Elles seront potentiellement utilisées afin de créer des modèles mathématiques prédictifs et afin de mettre en place des mesures de réponse à la pandémie.
+      L’objectif de cette étude est de collecter auprès de la population suisse des données de santé personnalisées liées à l’infection COVID-19. Ces données seront utilisées pour suivre et visualiser les changements de la situation sanitaire en temps réel. Elles seront potentiellement utilisées afin de créer des modèles mathématiques prédictifs et afin de mettre en place des mesures de réponse à la pandémie.
     </p>
 
     <p>
       <strong>Protocole expérimental et déroulement de l’étude</strong>
-      Cette étude prend la forme d’un questionnaire en ligne. Des informations médicales mais n’exposant pas l’identité des individus vont être collectées. Les informations vont être agrégées par code postal est vont être mises à disposition du public. Les données non agrégées vont être mises à la disposition des chercheurs en épidémiologie en Suisse afin d’améliorer la modélisation de la transmission de la maladie et d’évaluer le succès des mesures de confinement. Les participants sont encouragés à remplir le sondage quotidiennement. La collection de données va durer au moins un an, à compter de mars 2020.
-
+      Cette étude prend la forme d’un questionnaire en ligne. Des informations médicales mais n’exposant pas l’identité des individus vont être collectées. Les informations seront agrégées par code postal et 
+mises à disposition du public. Les données non agrégées seront mises à la disposition des chercheurs en épidémiologie en Suisse afin d’améliorer la modélisation de la transmission de la maladie et d’évaluer le succès des mesures de confinement. 
+Les participants sont encouragés à remplir le sondage quotidiennement. 
+La collecte de données durera au moins un an, à compter de mars 2020.
     </p>
 
     <p>
@@ -27,32 +29,34 @@
 
     <p>
       <strong>Avantages et risques liés à la participation</strong>
-      Les bénéfices pour les participants sont une estimation plus précise du risque épidémiologique au sein de leur localité (code postal). Dans le cadre d’une collecte anonyme des données le risque de re-identification des individus est très faible. La protection contre des attaques potentielles de ré-identification est garantie par diverse mesures, telles que l’agrégation et la k-anonymisation.
+      Les bénéfices pour les participants sont une estimation plus précise du risque épidémiologique au sein de leur localité (code postal). Dans le cadre d’une collecte anonyme des données le risque de re-identification des individus est très faible. La protection contre des attaques potentielles de ré-identification est garantie par diverses mesures, telles que l’agrégation et la k-anonymisation.
     </p>
 
     <p>
       <strong>Financement</strong>
-      Cette étude est financée par le fond principal de ETH Zurich.
+      Cette étude est financée par le fonds principal de l’EPF de Zurich (EPFZ).
     </p>
 
     <p>
       <strong>Compensation</strong>
-      Les participants à l’étude recevront aucune compensation (financière ou autre).
+      Les participants à l’étude ne recevront aucune compensation (financière ou autre).
     </p>
 
     <p>
       <strong>Droit de rétractation </strong>
-      Tous les participants peuvent se retirer de l’étude à tout moment sans préavis après de l’ETH Zurich ou du service de management des études. Les données anonymes collectées jusqu’à la rétractation seront conservées dans l’ensemble de données étudiées.
+      Tous les participants peuvent se retirer de l’étude à tout moment 
+      sans préavis à l’EPFZ ou au service de management des études. Les données anonymes collectées jusqu’à la rétractation seront conservées dans l’ensemble de données étudiées.
     </p>
 
     <p>
       <strong>Protection des données</strong>
-      Toutes les données obtenues vont être stockées de manière sécurisée sur les serveurs l’ ETH Zurich en Suisse. Toutes les données vont être collectées de manière anonyme. Les participants se verront assigner un code d’identification aléatoire. Aucune donnée permettant d’identifier personnellement les participants ne sera requise ou collecté.
+      Toutes les données obtenues seront stockées de manière sécurisée sur les serveurs de l’EPFZ en Suisse. Toutes les données sont collectées de manière anonyme.
+      Les participants se verront assigner un code d’identification aléatoire. Aucune donnée permettant d’identifier personnellement les participants ne sera requise ou collectée.
     </p>
 
     <p>
       <strong>Police d’assurance</strong>
-      Dans le cas d’un lien de causalité avéré entre la participation et un problème de santé, l’ETH Zurich s’engage à couvrir ce dernier via son assurance responsabilité civile générale (police d’assurance No. 30/4.078.362 Basler assurance AG). Dans le cas où la causalité ne serait pas établie et pour tout autre accident (eg. Accident entre le domicile et le lieu de l’étude), la couverture est à la charge de l’assurance santé ou accident du participant.
+      Dans le cas d’un lien de causalité avéré entre la participation et un problème de santé, l’EPFZ s’engage à couvrir ce dernier via son assurance responsabilité civile générale (police d’assurance No. 30/4.078.362 Basler assurance AG). Dans le cas où la causalité ne serait pas établie et pour tout autre accident (eg. accident entre le domicile et le lieu de l’étude), la couverture est à la charge de l’assurance santé ou accident du participant.
     </p>
 
     <p>
