--- a/source/localizable/consent.fr.html.erb
+++ b/source/localizable/consent.fr.html.erb
@@ -6,16 +6,16 @@
 
     <strong>Instructions:</strong>
     <ul>
-      <li>Veuillez lire ce formulaire avec l’attention.</li>
-      <li>N’hésitez pas à contacter la personne en charge de l’étude ou le directeur de recherche pour toute question.</li>
+      <li>Veuillez lire attentivement ce formulaire.</li>
+      <li>Pour toute question, n’hésitez pas à contacter la personne en charge de l’étude ou le directeur de recherche.</li>
     </ul>
 
     <p>
-      <strong>Titre de l’étude:</strong> Enquête longitudinale de santé COVID-19 l’échelle de la Suisse (SloCo)
+      <strong>Titre de l’étude:</strong> Etude longitudinale de santé COVID-19 à l’échelle de la Suisse (SloCo)
     </p>
 
     <p>
-      <strong>Lieu de l’étude: </strong><a href="https://covidtracker.ch">https://covidtracker.ch</a> (également disponible à <a href="http://covid19survey.ch">http://covid19survey.ch</a>)</p>
+      <strong>Lieu de l’étude: </strong><a href="https://covidtracker.ch">https://covidtracker.ch</a> (également disponible sur <a href="https://covid19survey.ch">http://covid19survey.ch</a>)</p>
 
     <p>
       <strong>Nom et prénom du chercheur principal</strong>: <a href="https://bmi.inf.ethz.ch/people/person/gunnar-raetsch/" target="_blank">Prof. Dr. Gunnar R&auml;tsch</a></p>
@@ -24,8 +24,8 @@
 
     <ul>
       <li>Je participe à cette étude sur une base volontaire et je dispose d’un droit de retrait à tout moment sans avoir à fournir de justification et sans m’exposer à des conséquences négatives.</li>
-      <li>J’ai été informé de manière <a href="/fr/study_info.html" target="_blank">écrite</a> des objectifs et des modalités de l’étude, des avantages et inconvénients ainsi que des risques encourus.</li>
-      <li>J’ai lu la fiche d’informations à l’attention des participants. Je suis conscient que je peux adresser mes questions à propos de l’étude par e-mail à <a href="mailto:info@covid19survey.ch">info@covid19survey.ch</a>. Mes questions concernant la participation à l'étude ont reçu une réponse satisfaisante. J’ai reçu une copie de la fiche <a href="/fr/study_info.html" target="_blank">d’information aux participants</a> ainsi que le <a href="/fr/consent.html" target="_blank">formulaire de consentement</a>.</li>
+      <li>J’ai été informé de manière <a href="/fr/study_info.html" target="_blank">par écrit</a> des objectifs et des modalités de l’étude, des avantages et inconvénients ainsi que des risques encourus.</li>
+      <li>J’ai lu la fiche d’information à l’attention des participants. Je suis conscient que je peux adresser mes questions à propos de l’étude par e-mail à <a href="mailto:info@covid19survey.ch">info@covid19survey.ch</a>. Mes questions concernant la participation à l'étude ont reçu une réponse satisfaisante. J’ai reçu une copie de la fiche <a href="/fr/study_info.html" target="_blank">d’information aux participants</a> ainsi que le <a href="/fr/consent.html" target="_blank">formulaire de consentement</a>.</li>
       <li>J’ai disposé de suffisamment de temps pour me décider à participer à l’étude.</li>
       <li>En cochant la case ci-dessous, je certifie que je remplis les prérequis énoncés dans la fiche d’information aux participants.</li>
       <li>J’autorise les personnes en charge de l’étude et les membres de la commission éthique à accéder aux données brutes, dans le respect des règles de confidentialité.</li>
