--- a/source/localizable/faq.fr.html.erb
+++ b/source/localizable/faq.fr.html.erb
@@ -4,14 +4,14 @@
   <section class="subpage">
     <h2>FAQ</h2>
     <h3 class="faq__question">Qui est derrière ce projet ?</h3>
-    <p>Le Covid-19-Tracker est réalisé par différents chercheurs et développeurs de logiciels et en échange avec la Direction de la santé publique du canton de Berne.</p>
+    <p>Le Covid-19-Tracker est réalisé par différents chercheurs et développeurs de logiciels, en collaboration avec la Direction de la santé publique du canton de Berne.</p>
     <h3 class="faq__question">Quel est le but de cette campagne ?</h3>
     <p>L’objectif du Covid-19-Tracker est de récolter, dans les plus brefs délais, un maximum de données de personnes saines et infectées en Suisse. Ces données doivent notamment permettre d’obtenir une image différenciée de la situation en lien avec le nouveau coronavirus.</p>
     <p> <%= link_to t(:aboutTheStudy), '/study_info.html', target: "_blank" %> </p>
     <h3 class="faq__question">En quoi la récolte des données peut-elle être utile dans la lutte contre le coronavirus ?</h3>
     <p>Les informations sur la situation en lien avec le coronavirus en Suisse sont difficiles à coordonner et à rassembler. Les tests généralisés ne sont pas envisageables. Par conséquent, chaque élément d’information supplémentaire peut contribuer à arrêter la propagation du virus.<br>Les données recueillies par le biais du Covid-19-Tracker comprennent le code postal ainsi qu’une auto-évaluation de la personne répondant au questionnaire. Les régions présentant un nombre de cas de maladie potentiellement élevé pourront ainsi être identifiées. Les autorités auront la possibilité de prendre des mesures ciblées et locales.</p>
     <h3 class="faq__question">Cette campagne a-t-elle un caractère scientifique ?</h3>
-    <p>La campagne a été développée en échange avec la Direction de la santé publique du canton de Berne. Cette institution confirme le besoin urgent d’informations les plus complètes possibles de la part de la population pour combattre l’épidémie. Des études scientifiques (dont celles du Dr. Jan von Overbeck) étayent l’approche actuellement mise en œuvre avec le Covid-19-Tracker.</p>
+    <p>La campagne a été développée en collaboration avec la Direction de la santé publique du canton de Berne. Cette institution confirme le besoin urgent d’informations les plus complètes possibles de la part de la population pour combattre l’épidémie. Des études scientifiques (dont celles du Dr. Jan von Overbeck) étayent l’approche actuellement mise en œuvre avec le Covid-19-Tracker.</p>
     <h3 class="faq__question">Qu’advient-il de mes données ?</h3>
     <p>Les données récoltées au moyen du Covid-19-Tracker ne peuvent pas être associées à des personnes. Ces données comprennent le code postal, l’âge, le genre et quelques informations complémentaires, mais aucun nom ni donnée à caractère personnel.</p>
     <h3 class="faq__question">Les données ne risquent-elles pas d’être faussées si, par exemple, les personnes habitant des zones urbaines densément interconnectées, sont plus nombreuses à répondre au questionnaire ?</h3>
