--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -43,7 +43,7 @@ ageRanges:
 <div class="form" id="form">
   <div class="container">
 
-    <ul style="margin-bottom: 1em;">
+    <ul class="moreinfo-links">
       <li><%= link_to t(:aboutTheStudy), '/study_info.html', target: "_blank" %></li>
       <li><%= link_to t(:consentInformation), '/consent.html', target: "_blank" %></li>
     </ul>
