--- a/source/blog/posts/2020-03-20/it.html.erb
+++ b/source/blog/posts/2020-03-20/it.html.erb
@@ -1,12 +1,13 @@
 ---
-title: Behind the Scenes
+title: Dietro le quinte
 author: Andre Kahles
 ---
-<h4>Setting up a COVID-19 Survey</h4>
+<h4>Impostazione di un sondaggio sul COVID-19</h4>
 <div class="alert alert-primary text-center font-italic">Se puoi aiutarci a tradurre, ti preghiamo di contattarci!</div>
 
 <p>
-News, social media, economy, our daily lives, … - everything seems to be fully determined by the current pandemic of the SARS-CoV-2 virus that has taken hold of almost all countries in the world and has brought public life as we know it to an abrupt standstill.
+Notizie, social media, economia, la nostra vita quotidiana, ... - tutto sembra essere condizionato dalla pandemia del virus SARS-CoV-2.
+It has taken hold of almost all countries in the world and has brought public life as we know it to an abrupt standstill.
 In this situation, many people feel anxious and are worried about their futures and those of their loved ones. In large part, this uncertainty arises from the fact that many things about SARS-CoV-2 are yet unknown, which makes it harder to provide accurate predictions. Fortunately, this is a situation that everybody can help to improve.
 </p>
 
