--- a/source/blog/posts/2020-04-11/it.html.erb
+++ b/source/blog/posts/2020-04-11/it.html.erb
@@ -1,12 +1,12 @@
 ---
-title: Stronger together
+title: Insieme siamo più forti
 author: Andre Kahles
 ---
-<h4>Joining forces to fight COVID-19</h4>
+<h4>Uniamo le forze per lottare contro il COVID-19</h4>
 <div class="alert alert-primary text-center font-italic">Se puoi aiutarci a tradurre, ti preghiamo di contattarci!</div>
 
 <p>
-  When we started to put our first questionnaires out, we quickly found ourselves in very good company. Also other teams had started to set up trackers and put them online, advertising them in social media. Their goal: collect anonymous health data to better inform models and put decisions about public health in this times of a pandemic onto a better statistical footing. Well, this was exactly the same goal as the one we had! It was great to see so much initiative from like minded people, most of them working on this in their free time. However, there was also a downside. Many participants approached us and were puzzled that there were so many parallel efforts. Should they fill out multiple surveys? How do the questions in different pages relate to each other? Is the data shared somehow? Would it hurt if they provided data to many projects? These and many more questions reached us and we realized it made no sense to ask the Swiss public to follow various trackers and provide their data multiple times. So what should we do?
+  Non appena abbiamo iniziato a pubblicare i nostri primi questionari, ci siamo ritrovati in ottima compagnia. Anche altri team avevano iniziato a…
 </p>
 
 <h4>Reaching out</h4>
