--- a/source/localizable/consent.it.html.erb
+++ b/source/localizable/consent.it.html.erb
@@ -7,7 +7,7 @@
     <strong>Istruzioni:</strong>
     <ul>
       <li>Si prega di leggere attentamente questo modulo.</li>
-      <li>In caso di domande, si prega di chiedere allo sperimentatore o alla persona di contatto.</li>
+      <li>In caso di domande, si prega contattare il responsabile dello studio.</li>
     </ul>
 
     <p>
@@ -15,7 +15,7 @@
     </p>
 
     <p>
-      <strong>Luogo di studio: </strong><a href="https://covidtracker.ch">https://covidtracker.ch</a> (disponibile anche a <a href="http://covid19survey.ch">http://covid19survey.ch</a>)</p>
+      <strong>Luogo di studio: </strong><a href="https://covidtracker.ch">https://covidtracker.ch</a> (disponibile anche su <a href="http://covid19survey.ch">http://covid19survey.ch</a>)</p>
 
     <p>
       <strong>Nome del responsabile dello studio:</strong> <a href="https://bmi.inf.ethz.ch/people/person/gunnar-raetsch/" target="_blank">Prof. Dr. Gunnar R&auml;tsch</a></p>
@@ -28,8 +28,8 @@
       <li>Ho letto le informazioni scritte per i volontari. Sono consapevole di poter inviare tutte le domande relative allo studio via e-mail a <a href="mailto:info@covid19survey.ch">info@covid19survey.ch</a>. Le mie domande relative alla partecipazione allo studio hanno avuto una risposta soddisfacente. Mi è stata data una copia delle <a href="/it/study_info.html" target="_blank">informazioni per i volontari</a> e il <a href="/it/consent.html" target="_blank">modulo di consenso</a>.</li>
       <li>Mi è stato concesso il tempo sufficiente per prendere una decisione sulla partecipazione allo studio.</li>
       <li>Selezionando la casella qui sotto, certifico di soddisfare i requisiti per la partecipazione allo studio indicati nelle informazioni per i volontari.</li>
-      <li>Accetto che gli investigatori responsabili e / o i membri della Commissione etica abbiano accesso ai dati originali secondo le rigorose regole di riservatezza.</li>
-      <li>Sono consapevole che durante lo studio devo rispettare i requisiti e i limiti descritti nelle informazioni per i volontari. Gli investigatori possono, senza mutuo consenso, escludermi dallo studio.</li>
+      <li>Sono d’accordo che i ricercatori responsabili e / o i membri della Commissione etica abbiano accesso ai dati originali secondo regole di riservatezza rigorose.</li>
+      <li>Sono consapevole che durante lo studio devo rispettare i requisiti e i limiti descritti nelle informazioni per i volontari. I ricercatori possono escludermi dallo studio senza mutuo consenso.</li>
     </ul>
   </section>
 </div>
