--- a/source/localizable/study_info.html.erb
+++ b/source/localizable/study_info.html.erb
@@ -52,7 +52,8 @@
 
     <p>
       <strong>Versicherungsschutz</strong>
-      Mögliche Gesundheitsschäden, die in direktem Zusammenhang mit der Studie stehen und nachweislich von der ETH Zürich verschuldet werden, sind durch die allgemeine Haftpflichtversicherung der ETH Zürich (Versicherungspolice Nr. 30 / 4.078.362 der Basler Versicherung AG) gedeckt. Über das zuvor Erwähnte hinaus liegt die Krankenversicherung und die Unfallversicherung (z. B. der Weg zum oder vom Studienort) in der Verantwortung des Teilnehmers.
+      Mögliche Gesundheitsschäden, die in direktem Zusammenhang mit der Studie stehen und nachweislich von der ETH Zürich verschuldet werden, sind durch die allgemeine Haftpflichtversicherung der ETH Zürich (Versicherungspolice Nr. 30 / 4.078.362 der Basler Versicherung AG) gedeckt. 
+      Über das zuvor Erwähnte hinaus liegt die Krankenversicherung und die Unfallversicherung (z. B. der Weg zum oder vom Studienort) in der Verantwortung des Teilnehmers.
     </p>
 
     <p>
