--- a/source/localizable/study_info.it.html.erb
+++ b/source/localizable/study_info.it.html.erb
@@ -11,7 +11,7 @@
 
     <p>
       <strong>Obiettivi dello studio</strong>
-      L'obiettivo di questo studio è di raccogliere dati sulla salute personale relativi alla malattia di COVID-19 in tutto il pubblico in Svizzera. Questi dati verranno utilizzati per monitorare e visualizzare in tempo reale i cambiamenti della situazione sanitaria Svizzera e potrebbero aiutare a costruire modelli predittivi che potrebbero eventualmente aiutare a progettare misure di mitigazione della pandemia.
+      L'obiettivo del presente studio è quello di raccogliere dati sanitari anonimi sull’infezione da Covid-19 presso una vasta fetta della popolazione svizzera. Tali dati saranno utilizzati per monitorare e visualizzare in tempo reale i cambiamenti della situazione sanitaria svizzera e potranno contribuire allo sviluppo di modelli predittivi volti all’introduzione di misure per mitigare la pandemia.
     </p>
 
     <p>
@@ -21,22 +21,22 @@
 
     <p>
       <strong>Condizioni di partecipazione</strong>
-      Qualsiasi persona fisica di età pari o superiore a 18 anni può partecipare allo studio. Un partecipante può fornire i dati direttamente per se stesso o come genitore o tutore per conto di una persona di età inferiore ai 18 anni.
+      Qualsiasi persona che ha già compiuto i 18 anni può partecipare allo studio. Il partecipante può compilare il modulo con i suoi dati personali oppure, in qualità di genitore o di tutore legale, compilarlo per altre persone di età inferiore ai 18 anni.
     </p>
 
     <p>
       <strong>Vantaggi e rischi della partecipazione</strong>
-      I benefici per i partecipanti sono una stima più esatta del loro rischio epidemiologico locale con la loro area di codice postale. Poiché questo studio è condotto in forma anonima, il rischio di reidentificazione dei partecipanti è molto ridotto. Varie misure, come l'aggregazione e l'anonimato-k, sono adottate per proteggere i dati non identificati da attacchi di reidentificazione.
+      I benefici per i partecipanti sono una stima più precisa del rischio epidemiologico riscontrato nell’area del loro codice postale. Poiché questo studio è condotto in forma anonima, il rischio di reidentificazione dei partecipanti è molto ridotto. Sono state adottate varie misure, quali l'aggregazione e il k-anonimato, mirate alla protezione dei dati non identificati dagli attacchi di reidentificazione.
     </p>
 
     <p>
       <strong>Fonte di finanziamento</strong>
-      Questo studio è finanziato dalle risorse dell'ETH di Zurigo.
+      Il presente studio è realizzato grazie ai mezzi finanziari dell'ETH di Zurigo.
     </p>
 
     <p>
-      <strong>Compensazione</strong>
-      I partecipanti non riceveranno alcun compenso (finanziario o di altro tipo) per la partecipazione a questo studio.
+      <strong>Indennità</strong>
+      I partecipanti al presente studio non ricevono alcun compenso (finanziario né di altro tipo).
     </p>
 
     <p>
@@ -51,13 +51,13 @@
 
     <p>
       <strong>Copertura assicurativa</strong>
-      Eventuali danni alla salute, che sono direttamente correlati allo studio e che sono manifestamente imputabili all'ETH di Zurigo, sono coperti dall'assicurazione di responsabilità civile generale dell'ETH di Zurigo (Polizza assicurativa n. 30 / 4.078.362 della Basler Versicherung AG). Oltre a quanto sopra menzionato, l'assicurazione sanitaria e l'assicurazione infortuni (ad es. Il pendolarismo da o verso il luogo di studio) sono a carico del partecipante.
-
+      Eventuali danni alla salute, che sono direttamente correlati allo studio e che sono manifestamente imputabili all'ETH di Zurigo, sono coperti dall'assicurazione di responsabilità civile generale dell'ETH di Zurigo (Polizza assicurativa n. 30 / 4.078.362 della Basler Versicherung AG). 
+      Oltre a quanto sopra, sono a carico del partecipante l'assicurazione malattia e l'assicurazione contro gli infortuni (ad es. per le trasferte da e per il luogo di studio).
     </p>
 
     <p>
       <strong>Contatti</strong>
-      In caso di domande, si prega di contattare il Prof. Dr. Gunnar R&auml;tsch sotto <a href="mailto:info@covid19survey.ch">info@covid19survey.ch</a>.
+      In caso di domande, si prega di contattare il Prof. Dr. Gunnar R&auml;tsch all’indirizzo di posta elettronica <a href="mailto:info@covid19survey.ch">info@covid19survey.ch</a>.
     </p>
   </section>
 </div>
