--- a/source/localizable/blog/index.it.html.erb
+++ b/source/localizable/blog/index.it.html.erb
@@ -15,7 +15,7 @@ per_page: 10
       <% end %>
     <% end %>
 
-    <h1>Blog Posts</h1>
+    <h1>Post del blog</h1>
     <% blog.articles_by_locale.each_with_index do |article, i| %>
       <h2><%= link_to article.title, article %></h2>
       <h4 class="blog_time"><%= article.data.author %>, <%= article.date.strftime('%b %e, %Y') %></h4>
