--- a/source/localizable/partials/home_more.it.html.erb
+++ b/source/localizable/partials/home_more.it.html.erb
@@ -1,9 +1,9 @@
-<h1 class="survey_additional_header">Cosa dovresti sapere</h1>
+<h1 class="survey_additional_header">Cosa è importante sapere</h1>
 
 <p class="survey_additional">
-  I dati raccolti da questo sondaggio verranno utilizzati per la visualizzazione di statistiche riassuntive e per la ricerca epidemiologica. Questo questionario è per tutti, non solo per le persone che potrebbero aver contratto SARS-CoV-2 (COVID-19). Se desidera rispondere per più membri della sua famiglia (ad es. Bambini), compili un formularioi per persona.
+ I dati raccolti da questo sondaggio saranno utilizzati per la visualizzazione di statistiche riassuntive e per la ricerca epidemiologica. Questo questionario è per tutti, non solo per le persone che potrebbero aver contratto l’infezione da SARS-CoV-2 (COVID-19). Se desidera rispondere per più membri della sua famiglia (ad es. i figli), è pregato di compilare un modulo per ogni persona.
 </p>
 
 <p class="survey_additional_part2">
-  Questo sondaggio non è uno strumento diagnostico COVID-19 e la sua partecipazione non preclude un test diagnostico, se necessario. Avere uno dei sintomi elencati nel nostro sondaggio non è un'indicazione di COVID-19. Avere comorbidità elencate nel nostro sondaggio non significa necessariamente che lei sia un individuo a rischio. Se ritiene di essere malato o desideri ottenere informazioni mediche su COVID-19, contatti il suo medico di famiglia o visiti il <a href="https://www.bag.admin.ch/bag/en/home.html" target="_blank">sito web dell'Ufficio federale della sanità pubblica</a>.
+ Il presente sondaggio non è uno strumento per la diagnosi di infezione da COVID-19 e il fatto di parteciparvi non esclude un test diagnostico, qualora si rendesse necessario. La presenza di uno dei sintomi elencati nel sondaggio non è necessariamente indice di un’infezione da COVID-19. Essere affetti da una patologia pregressa, elencata nel nostro sondaggio, non significa necessariamente appartenere a un gruppo a rischio.  Se pensa di aver contratto l’infezione o desidera ottenere informazioni mediche in merito al COVID-19, la preghiamo di contattare il suo medico di famiglia o di visitare il <a href="https://www.bag.admin.ch/bag/en/home.html" target="_blank">sito web dell'Ufficio federale della sanità pubblica</a>.
 </p>
