--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -1,4 +1,4 @@
-<footer class="footer">
+<!-- <footer class="footer">
   <div class="container">
     <ul class="footer__nav">
       <li><%= link_to 'Map', '/map.html' %></li>
@@ -7,4 +7,4 @@
       <li><%= link_to t(:dataProtection), '/dataprotection.html' %></li>
     </ul>
   </div>
-</footer>
+</footer> -->
