--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -1,4 +1,4 @@
-<div class="navigation">
+<!-- <div class="navigation">
   <div class="navigation__inner">
     <ul class="lang-nav">
       <li><a href="/" data-lang="de" class="js-setLang langlink ml-4<% if I18n.locale == :de %> active<% end %>">Deutsch</a></li>
@@ -14,4 +14,4 @@
       </ul>
     </nav>
   </div>
-</div>
+</div> -->
