--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -9,16 +9,17 @@
   <div class="container">
     <div>
       <%= partial "partials/icon" %>
-      <h1 class="hero__headline"><%= t(:title) %></h1>
-      <p><i>Info: We are currently joining forces with ETH to create a unified platform, see <a href="https://www.be.ch/portal/de/index/mediencenter/medienmitteilungen.meldungNeu.mm.html/portal/de/meldungen/mm/2020/04/20200408_0901_die_eth_zuerich_undderkantonbernentwickelngemeinsamdencovid-19sy" target="_blank">press release</a>.</i></p>
-      <%= t(:introduction) %>
+<!--       <h1 class="hero__headline"><%= t(:title) %></h1>
+ --><!--       <p><i>Info: We are currently joining forces with ETH to create a unified platform, see <a href="https://www.be.ch/portal/de/index/mediencenter/medienmitteilungen.meldungNeu.mm.html/portal/de/meldungen/mm/2020/04/20200408_0901_die_eth_zuerich_undderkantonbernentwickelngemeinsamdencovid-19sy" target="_blank">press release</a>.</i></p>
+ -->      <h2><i>This site is under maintenance right now. We will be back shortly. </i></h2>
+<!--       <%= t(:introduction) %>
       <p><%= link_to t(:seemore), '/faq.html' %></p>
       <p><a target="_blank" rel="noreferrer" href="<%= t(:pressReleaseLink) %>"><%= t(:pressRelease) %></a></p>
       <a href="#form" class="btn btn--inv"><%= t(:toform) %></a>
     </div>
-  </div>
+ -->  </div>
 </div>
-
+<!-- 
 <section class="home-section" id="partners">
   <h2><%= t(:supportedBy) %>:</h2>
   <%= partial "partials/partners" %>
@@ -293,3 +294,4 @@
     </form>
   </div>
 </div>
+ -->
