add gunnar and research@ address to imprint

--- a/source/localizable/imprint.html.erb
+++ b/source/localizable/imprint.html.erb
@@ -27,14 +27,27 @@
     <p><b><%= t(:generalinfo) %></b><br><a href="mailto:info@covidtracker.ch">info@covidtracker.ch</a></p>
     <p><b><%= t(:press) %></b><br><a href="mailto:press@covidtracker.ch">press@covidtracker.ch</a></p>
     <p><b><%= t(:technology) %></b><br><a href="mailto:tech@covidtracker.ch">tech@covidtracker.ch</a></p>
+    <p><b>Research</b><br><a href="mailto:research@covidtracker.ch">research@covidtracker.ch</a></p>
     <br>
     <p>
-
       <b>Dr. med. Jan von Overbeck</b> <br>
       FMH Médecine interne et infectiologie, MSc, <br>
       Fellow of the American College of Physicians (FACP) <br>
       jan.von.overbeck@icloud.com
     </p>
-    <p><b>Milliways GmbH</b><br>Tizian & Luca Naterop<br>Bauhallengasse 5<br>8004 Zürich</p>
+    <p>
+      <b>Prof. Dr. Gunnar Rätsch</b> <br>
+      ETH Zürich<br>
+      Biomedical Informatics Group<br>
+      Universitätstrasse 6 <br>
+      8092 Zürich<br>
+      raetsch@inf.ethz.ch
+    </p>
+    <p><b>Milliways GmbH</b>
+      <br>Tizian & Luca Naterop
+      <br>Bauhallengasse 5
+      <br>8004 Zürich
+      <br>contact@milliwayszurich.ch
+    </p>
   </section>
 </div>
