added blog updates and changes some verbage on the main page. also added download buttons above the map.

--- a/source/localizable/imprint.html.erb
+++ b/source/localizable/imprint.html.erb
@@ -49,5 +49,8 @@
       <br>8004 Zürich
       <br>contact@milliwayszurich.ch
     </p>
+
+    <h2>Attribution</h2>
+    <p><b>Download</b> icon by Darrin Loeliger from the Noun Project</p>
   </section>
 </div>
