--- a/source/localizable/map.en.html.erb
+++ b/source/localizable/map.en.html.erb
@@ -3,7 +3,20 @@
 
 <div class="container container--wide">
   <section class="map map--detail">
-    <h3>Detailed map</h3>
+    <h3>
+      Detailed map
+      <div style="float: right; text-align: right; white-space: nowrap;">
+        <a class="btn btn--small btn--download" href="https://dataserve.covidtracker.ch/api/zipsDaily">
+          <img src="/images/noun_Download_1088686.svg" style="height: 15px; padding-bottom: 2px; margin-right: 3px; vertical-align: middle;" /> Daily
+        </a>
+        <a class="btn btn--small btn--download" href="https://dataserve.covidtracker.ch/api/zipsWeekly">
+          <img src="/images/noun_Download_1088686.svg" style="height: 15px; padding-bottom: 2px; margin-right: 3px; vertical-align: middle;" /> Weekly
+        </a>
+        <a class="btn btn--small btn--download" href="https://dataserve.covidtracker.ch/api/zipsTotal">
+          <img src="/images/noun_Download_1088686.svg" style="height: 15px; padding-bottom: 2px; margin-right: 3px; vertical-align: middle;" /> Total
+        </a>
+      </div>
+    </h3>
     <p>Total answers: <b><span id="totalsubs"><%= t(:loading) %></span></b></p>
     <div class="map-container">
       <iframe src="https://experience.arcgis.com/experience/543146be68424528856d57262cc2b02d/" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
