Added API download buttons with WIP translations to each page.

--- a/source/localizable/map.en.html.erb
+++ b/source/localizable/map.en.html.erb
@@ -5,17 +5,7 @@
   <section class="map map--detail">
     <h3>
       Detailed map
-      <div style="float: right; text-align: right; white-space: nowrap;">
-        <a class="btn btn--small btn--download" href="https://dataserve.covidtracker.ch/api/zipsDaily">
-          <img src="/images/noun_Download_1088686.svg" style="height: 15px; padding-bottom: 2px; margin-right: 3px; vertical-align: middle;" /> Daily
-        </a>
-        <a class="btn btn--small btn--download" href="https://dataserve.covidtracker.ch/api/zipsWeekly">
-          <img src="/images/noun_Download_1088686.svg" style="height: 15px; padding-bottom: 2px; margin-right: 3px; vertical-align: middle;" /> Weekly
-        </a>
-        <a class="btn btn--small btn--download" href="https://dataserve.covidtracker.ch/api/zipsTotal">
-          <img src="/images/noun_Download_1088686.svg" style="height: 15px; padding-bottom: 2px; margin-right: 3px; vertical-align: middle;" /> Total
-        </a>
-      </div>
+      <%= partial "partials/apibuttons" %>
     </h3>
     <p>Total answers: <b><span id="totalsubs"><%= t(:loading) %></span></b></p>
     <div class="map-container">
