--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -98,6 +98,11 @@ h4 {
     font-size: 14px;
     padding-top: .5rem;
   }
+  &--download {
+    img {
+      height: 15px; padding-bottom: 2px; margin-right: 3px; vertical-align: middle;
+    }
+  }
 }
 
 .container {
