open api in new tab

--- a/source/partials/_apibuttons.erb
+++ b/source/partials/_apibuttons.erb
@@ -1,11 +1,11 @@
 <div style="float: right; text-align: right; white-space: nowrap;">
-  <a class="btn btn--small btn--download" href="https://dataserve.covidtracker.ch/api/zipsDaily">
+  <a class="btn btn--small btn--download" href="https://dataserve.covidtracker.ch/api/zipsDaily" target="_blank">
     <img src="/images/noun_Download_1088686.svg" /> <%= t(:'apibuttons.daily') %>
   </a>
-  <a class="btn btn--small btn--download" href="https://dataserve.covidtracker.ch/api/zipsWeekly">
+  <a class="btn btn--small btn--download" href="https://dataserve.covidtracker.ch/api/zipsWeekly" target="_blank">
     <img src="/images/noun_Download_1088686.svg" /> <%= t(:'apibuttons.weekly') %>
   </a>
-  <a class="btn btn--small btn--download" href="https://dataserve.covidtracker.ch/api/zipsTotal">
+  <a class="btn btn--small btn--download" href="https://dataserve.covidtracker.ch/api/zipsTotal" target="_blank">
     <img src="/images/noun_Download_1088686.svg" /> <%= t(:'apibuttons.total') %>
   </a>
 </div>
