--- a/source/partials/_apibuttons.erb
+++ b/source/partials/_apibuttons.erb
@@ -1,4 +1,5 @@
-<div style="float: right; text-align: right; white-space: nowrap;">
+<div style="">
+  <h3>Data Download</h3>  
   <a class="btn btn--small btn--download" href="https://dataserve.covidtracker.ch/api/zipsDaily" target="_blank">
     <img src="/images/noun_Download_1088686.svg" /> <%= t(:'apibuttons.daily') %>
   </a>
@@ -8,4 +9,7 @@
   <a class="btn btn--small btn--download" href="https://dataserve.covidtracker.ch/api/zipsTotal" target="_blank">
     <img src="/images/noun_Download_1088686.svg" /> <%= t(:'apibuttons.total') %>
   </a>
+  <p>
+    See API at <a href="https://dataserve.covidtracker.ch/api" target="_blank">dataserve.covidtracker.ch/api</a>
+  </p>
 </div>
